statum-macros/tests/ui/invalid_machine_multiple_generics.stderr
error: Error: #[machine] currently supports exactly one generic type parameter.

       Fix: remove additional generics from `Workflow` and keep durable context in fields.

       Expected:
       pub struct Workflow<State> { ... }
  --> tests/ui/invalid_machine_multiple_generics.rs:13:1
   |
13 | #[machine]
   | ^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `machine` (in Nightly builds, run with -Z macro-backtrace for more info)
